[tool.poetry]
name = "sauce"
version = "0.1.0"
description = ""
authors = ["ivanovajulika <julika77@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"
flake8 = "^5.0.4"
selenium = "^4.6.0"
pytest = "^7.2.0"
webdriver-manager = "^3.8.4"
pytest-html = "^3.2.0"
allure-pytest = "^2.11.1"
allure-python-commons = "^2.11.1"
pyenchant = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
